--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -56,7 +56,7 @@ jobs:
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
     env:
-      Solution_Name: FFBatchConverter.sln                         # Replace with your solution name, i.e. MyWpfApp.sln.
+      placeholder: Placeholder environment variable. This doesn't do anything.
 
     steps:
     - name: Checkout
@@ -78,15 +78,13 @@ jobs:
     - name: Execute unit tests
       run: dotnet test
 
-    # Test print cwd
-    - name: Log current directory
-      run: dir
-
     # Restore the application to populate the obj folder with RuntimeIdentifiers
     - name: Restore the application
-      run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration
-      env:
-        Configuration: ${{ matrix.configuration }}
+      run: dotnet restore
+
+    # Build
+    - name: Publish for Windows x64
+      run: dotnet publish -r win-x64 --self-contained true -p:PublishTrimmed=true -p:PublishAot=true
 
     # Upload the MSIX package: https://github.com/marketplace/actions/upload-a-build-artifact
     - name: Upload build artifacts
