--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -21,7 +21,7 @@ jobs:
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
     env:
-      rid_os: ${{ contains(matrix.os, "windows") && 'win' || contains(matrix.os, "ubuntu") && 'linux' }}
+      rid_os: ${{ contains(matrix.os, 'windows') && 'win' || contains(matrix.os, 'ubuntu') && 'linux' }}
       rid: ${{ rid_os }}-${{ matrix.arch }}
 
     steps:
