--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -69,6 +69,6 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: Output
-        path: ./
+        path: ./build-${{ env.rid }}
 
         
