--- a/FFBatchConverter/FFBatchConverter.csproj
+++ b/FFBatchConverter/FFBatchConverter.csproj
@@ -9,7 +9,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Terminal.Gui" Version="1.*"/>
+        <PackageReference Include="JetBrains.Annotations" Version="2024.2.0-eap1" />
+        <PackageReference Include="Terminal.Gui" Version="2.0.0-pre.1666" />
     </ItemGroup>
 
 </Project>
