--- a/FFBatchConverter/FFBatchConverter.csproj
+++ b/FFBatchConverter/FFBatchConverter.csproj
@@ -10,6 +10,8 @@
 
     <ItemGroup>
         <PackageReference Include="JetBrains.Annotations" Version="2024.2.0-eap1" />
+        <PackageReference Include="ReactiveMarbles.ObservableEvents.SourceGenerator" Version="1.3.1" />
+        <PackageReference Include="ReactiveUI" Version="20.1.1" />
         <PackageReference Include="Terminal.Gui" Version="2.0.0-pre.1666" />
     </ItemGroup>
 
