--- a/FFBatchConverter.Avalonia/FFBatchConverter.Avalonia.csproj
+++ b/FFBatchConverter.Avalonia/FFBatchConverter.Avalonia.csproj
@@ -22,6 +22,7 @@
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.10"/>
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.10"/>
+        <PackageReference Include="Avalonia.Themes.Simple" Version="11.0.10" />
         <PackageReference Include="BidirectionalMap" Version="1.0.0" />
         <PackageReference Include="ReactiveMarbles.ObservableEvents.SourceGenerator" Version="1.3.1" />
         <PackageReference Include="ReactiveUI" Version="20.1.1" />
@@ -33,7 +34,7 @@
         <DependentUpon>App.axaml</DependentUpon>
         <SubType>Code</SubType>
       </Compile>
-      <Compile Update="Source\Views\TestWindow.axaml.cs">
+      <Compile Update="Source\Views\TestView.axaml.cs">
         <DependentUpon>TestWindow.axaml</DependentUpon>
         <SubType>Code</SubType>
       </Compile>
