Did the stuff that made a barebones version of the VMAF encoder work. Barely.

--- a/FFBatchConverter.Avalonia/FFBatchConverter.Avalonia.csproj
+++ b/FFBatchConverter.Avalonia/FFBatchConverter.Avalonia.csproj
@@ -34,7 +34,7 @@
         <DependentUpon>App.axaml</DependentUpon>
         <SubType>Code</SubType>
       </Compile>
-      <Compile Update="Source\Views\VMAFVideoEncoderView.axaml.cs">
+      <Compile Update="Source\Views\BatchVMAFTargetEncoderView.axaml.cs">
         <DependentUpon>TestWindow.axaml</DependentUpon>
         <SubType>Code</SubType>
       </Compile>
