--- a/FFBatchConverter/FFBatchConverter.csproj
+++ b/FFBatchConverter/FFBatchConverter.csproj
@@ -11,4 +11,8 @@
         <PackageReference Include="JetBrains.Annotations" Version="2024.2.0-eap1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Source\Tokens\" />
+    </ItemGroup>
+
 </Project>
