--- a/FFBatchConverter/FFBatchConverter.csproj
+++ b/FFBatchConverter/FFBatchConverter.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="BidirectionalMap" Version="1.0.0" />
         <PackageReference Include="JetBrains.Annotations" Version="2024.2.0-eap1" />
     </ItemGroup>
 
