--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -15,6 +15,7 @@ jobs:
       matrix:
         os: [windows-latest, ubuntu-latest, macos-latest]
         arch: [x64, arm64]
+        type: [aot, singlefile]  # AOT produces faster builds, but comes with native libraries in separate files. Singlefile produces a single file, but is not AOT.
         
 
     runs-on: ${{matrix.os}}  # For a list of available runner types, refer to
@@ -62,7 +63,7 @@ jobs:
 
     # Build
     - name: Publish
-      run: dotnet publish -r ${{ env.rid }} --self-contained true -p:PublishTrimmed=true -p:PublishAot=true -p:IncludeNativeLibrariesForSelfExtract=true -o build-${{ env.rid }}
+      run: dotnet publish -r ${{ env.rid }} --self-contained true -p:PublishTrimmed=true ${{ matrix.type == 'aot' && '-p:PublishAot=true' || matrix.type == 'singlefile' && '-p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true' }} -o build-${{ env.rid }}
 
     # Upload the build artifacts: https://github.com/marketplace/actions/upload-a-build-artifact
     - name: Upload build artifacts
